@@ -35,6 +35,11 @@
 #if(!defined SLP_NETWORK_H_INCLUDED)
 #define SLP_NETWORK_H_INCLUDED
 
+#ifdef WIN32
+#include <windows.h>
+#include <io.h>
+#include <errno.h>
+#else
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
@@ -45,7 +50,7 @@
 #include <netdb.h> 
 #include <fcntl.h> 
 #include <errno.h>
-
+#endif
 
 #include <slp_buffer.h>
 #include <slp_property.h>
